# baipiao-bot-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
.github/workflows/: baipiao-pr.yml  baipiao.yml  ci.yml  debug-pr.yml  debug.yml
examples/: comment.rs  echo.rs
src/: lib.rs
