[package]
name = "baipiao-bot-rust"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
async-trait = "0.1.42"

[dev-dependencies]
tokio = { version = "1.1.1", features = ["macros", "rt-multi-thread"] }
octocrab = "0.8.11"

