[package]
name = "baipiao-bot-rust"
version = "0.1.1"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"
description = "A simple rust bot based on GitHub Action, total free, no server required"
license = "Unlicense"

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.59"
async-trait = "0.1.41"

[dev-dependencies]
tokio = { version = "1.1.1", features = ["macros", "rt-multi-thread"] }
octocrab = "0.7.0"

