[package]
name = "baipiao-bot-rust"
version = "0.2.1"
authors = ["longfangsong <longfangsong@icloud.com>"]
edition = "2018"
description = "A simple rust bot based on GitHub Action, total free, no server required"
license = "Unlicense"

[lib]
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.64"
async-trait = "0.1.42"

[dev-dependencies]
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
octocrab = "0.8.11"
